Database connected and save data in that

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MONGODB_URI=mongodb+srv://jobayerahmed109:jj6PlxjA9zorbc2g@todo-next-crud.29fdyhg.mongodb.net/todo-next
+MONGODB_URI=mongodb+srv://todoUser:pfDaXZiuJEbn4mtq@cluster0.r2yfgwu.mongodb.net/
 
-# jj6PlxjA9zorbc2g
-# jobayerahmed109
+
+
+# mongodb+srv://todoUser:pfDaXZiuJEbn4mtq@cluster0.r2yfgwu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
